<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chakwak.tarotscoreboard.activities.CreateGameActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
	    
	    <TextView
	        android:id="@+id/text_game_create_taker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_game_create_taker" 
	        android:textSize="@dimen/form_text_size"
	        android:paddingLeft="0dp"
	        android:padding="@dimen/form_padding"
	        android:layout_alignParentLeft="true"/>
	    
	    <Spinner 
	        android:id="@+id/spinner_game_create_taker"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true" 
	        android:layout_toRightOf="@id/text_game_create_taker"
	        android:prompt="@string/prompt_game_create_taker"
	        android:layout_marginBottom="5dp"/>
	
	   
	    <TextView
	        android:id="@+id/text_game_create_prise"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_game_create_prise" 
	        android:textSize="@dimen/form_text_size"
	        android:paddingLeft="0dp"
	        android:padding="@dimen/form_padding"
	        android:layout_below="@+id/spinner_game_create_taker"
	        android:layout_alignParentLeft="true"/>
	    
	    <Spinner 
	        android:id="@+id/spinner_game_create_prise"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinner_game_create_taker"
	        android:layout_toRightOf="@id/text_game_create_prise"
	        android:prompt="@string/prompt_game_create_prise"
	        android:layout_marginBottom="5dp"/>
	
	   
	    <TextView
	        android:id="@+id/text_game_create_appel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_game_create_appel" 
	        android:textSize="@dimen/form_text_size"
	        android:paddingLeft="0dp"
	        android:padding="@dimen/form_padding"
	        android:layout_below="@+id/spinner_game_create_prise"
	        android:layout_alignParentLeft="true"/>
	    
	    <Spinner 
	        android:id="@+id/spinner_game_create_appel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinner_game_create_prise"
	        android:layout_toRightOf="@id/text_game_create_appel"
	        android:prompt="@string/prompt_game_create_appel"
	        android:layout_marginBottom="5dp"/>
	
	   
	    <TextView
	        android:id="@+id/text_game_create_associate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_game_create_associate" 
	        android:textSize="@dimen/form_text_size"
	        android:paddingLeft="0dp"
	        android:padding="@dimen/form_padding"
	        android:layout_below="@+id/spinner_game_create_appel"
	        android:layout_alignParentLeft="true"/>
	    
	    <Spinner 
	        android:id="@+id/spinner_game_create_associate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinner_game_create_appel"
	        android:layout_toRightOf="@id/text_game_create_associate"
	        android:prompt="@string/prompt_game_create_associate"
	        android:layout_marginBottom="5dp"/>
	
	    <LinearLayout 
	        android:id="@+id/linear_game_create"
	        android:layout_below="@+id/spinner_game_create_associate"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal">
		    <TextView
		        android:id="@+id/text_game_create_validated"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_game_create_validated" 
	       		android:textSize="@dimen/form_text_size"
		        android:paddingLeft="0dp"
		        android:padding="@dimen/form_padding"/>
		    
		    <CheckBox
		        android:id="@+id/check_game_create_validated"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""/>
		    
		    <TextView
		        android:id="@+id/text_game_create_result"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_game_create_result" 
	        	android:textSize="@dimen/form_text_size"
		        android:padding="@dimen/form_padding"/>
		    
		   	<Spinner
		        android:id="@+id/spinner_game_create_result"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:prompt="@string/prompt_game_create_result"
		        android:layout_marginBottom="5dp"/>
	    </LinearLayout>

		<TextView
	        android:id="@+id/text_game_creation_players"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_game_create_players" 
	        android:textSize="@dimen/form_text_size"
	        android:gravity="center_horizontal"
	        android:layout_below="@id/linear_game_create"
	        android:layout_marginBottom="5dp"
	        />
	    
	    <Button
	        android:id="@+id/button_select_players"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_game_creation_players"
	        android:layout_centerHorizontal="true"
	        android:padding="5dp"
	        android:onClick="onPlayerSpinnerClick"
	        />
	
	    <Button
	        android:id="@+id/button_event_creation"
	        android:text="@string/button_event_creation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/button_select_players"
	        android:layout_centerHorizontal="true"
	        android:onClick="onCreateGame" />
	    
	</RelativeLayout>
</ScrollView>
