<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chakwak.tarotscoreboard.activities.AddPlayerActivity" >

    <TextView
        android:id="@+id/new_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/new_player_text" />
    
    <EditText
        android:id="@+id/new_player_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_player_edit"
        android:inputType="textCapWords"
        android:lines="1" />
    
    <Button
        android:id="@+id/new_player_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_player_button"
        android:onClick="createPlayer" />

</LinearLayout>
