<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chakwak.tarotscoreboard.activities.CreateEventActivity" >

    <TextView
        android:id="@+id/text_event_creation_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_event_creation_location" 
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/edit_event_creation_location"
        android:layout_alignParentLeft="true"/>
    
    <EditText 
        android:id="@+id/edit_event_creation_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_creation_location" 
        android:inputType="textCapSentences"
        android:layout_alignParentTop="true" 
        android:layout_toRightOf="@id/text_event_creation_location" />

    <TextView
        android:id="@+id/text_event_creation_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_event_creation_players" 
        android:icon="@drawable/ic_action_new_event"
        android:textSize="25sp"
        android:layout_below="@id/edit_event_creation_location"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        />
    
    <View
        android:id="@+id/separator_player"
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
        android:layout_below="@id/text_event_creation_players"
	    android:background="@android:color/darker_gray"
        android:layout_marginBottom="5dp"/>
    
    <ListView
        android:id="@+id/list_event_create_players"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator_player" >
        
    </ListView>

    <Button
        android:id="@+id/button_event_creation"
        android:text="@string/button_event_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list_event_create_players"
        android:layout_alignRight="@+id/text_event_creation_players"
        android:layout_marginBottom="5dp"
        android:onClick="onCreateEvent" />
        
</RelativeLayout>
